Documentation: Get rid of obsolete doc/libiqxmlrpc.pages. From now doxygen will generate documents based on code only, no extra texts.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,7 +1,6 @@
 EXTRA_DIST = \
 	libiqxmlrpc.doxygen \
-	libiqxmlrpc.doxygen.in \
-	libiqxmlrpc.pages/*.dox
+	libiqxmlrpc.doxygen.in
 
 DOCDIR=${prefix}/share/doc/@PACKAGE@
 MKDOC=X@MAKEDOCS@
