--- a/win32/libiqxmlrpc.vcproj
+++ b/win32/libiqxmlrpc.vcproj
@@ -23,7 +23,7 @@
 				AdditionalOptions="/wd4800 /wd4267"
 				Optimization="0"
 				AdditionalIncludeDirectories="..;..\libiqxmlrpc;..\win32;&quot;$(DEPENDS_ROOT)\include&quot;"
-				PreprocessorDefinitions="WIN32;_WINDOWS;_DEBUG;_USRDLL;LIBIQXMLRPC_COMPILATION;DLL_EXPORT"
+				PreprocessorDefinitions="WIN32;_WINDOWS;_DEBUG;_USRDLL;LIBIQXMLRPC_COMPILATION;DLL_EXPORT;WIN32_LEAN_AND_MEAN"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="0"
 				RuntimeLibrary="3"
