--- a/win32/libiqxmlrpc.vcproj
+++ b/win32/libiqxmlrpc.vcproj
@@ -79,7 +79,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="..;..\libiqxmlrpc;..\win32;&quot;$(DEPENDS_ROOT)\include&quot;"
-				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;_USRDLL;LIBIQXMLRPC_COMPILATION;DLL_EXPORT"
+				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;_USRDLL;LIBIQXMLRPC_COMPILATION;DLL_EXPORT;WIN32_LEAN_AND_MEAN"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="0"
 				RuntimeLibrary="2"
