New parser: get rid of libxml++ dependency.

--- a/configure.in
+++ b/configure.in
@@ -51,10 +51,10 @@ INCLUDES="${INCLUDES} ${OPENSSL_CFLAGS}"
 LDFLAGS="${LDFLAGS} ${OPENSS_LIBS}"
 AC_SUBST(OPENSSL_LIBS)
 
-PKG_CHECK_MODULES( LIBXMLPP, libxml++-1.0 )
-INCLUDES="${INCLUDES} ${LIBXMLPP_CFLAGS}"
-LDFLAGS="${LDFLAGS} ${LIBXMLPP_LIBS}"
-AC_SUBST(LIBXMLPP_LIBS)
+PKG_CHECK_MODULES( LIBXML2, libxml-2.0 )
+INCLUDES="${INCLUDES} ${LIBXML2_CFLAGS}"
+LDFLAGS="${LDFLAGS} ${LIBXML2_LIBS}"
+AC_SUBST(LIBXML2_LIBS)
 
 AC_SUBST(PACKAGE)
 AC_SUBST(VERSION)
