--- a/libiqxmlrpc.pc.in
+++ b/libiqxmlrpc.pc.in
@@ -5,6 +5,6 @@ includedir=${prefix}/include/
 Name: libiqxmlrpc
 Description: Object-oriented C++ XML-RPC library.
 Version: @VERSION@
-Requires: libxml++-1.0
+Requires: libxml-2.0
 Libs: -L${libdir} -liqxmlrpc @BOOST_THREAD_LIB@ @OPENSSL_LIBS@ 
 Cflags: -I${includedir}
