--- a/libiqxmlrpc-client.pc.in
+++ b/libiqxmlrpc-client.pc.in
@@ -5,6 +5,6 @@ includedir=${prefix}/include/
 Name: libiqxmlrpc
 Description: Object-oriented C++ XML-RPC library. Client's stuff only.
 Version: @VERSION@
-Requires: libxml++-1.0
+Requires: libxml-2.0
 Libs: -liqxmlrpc-client @OPENSSL_LIBS@
 Cflags: -I${includedir}
