--- a/libiqxmlrpc-server.pc.in
+++ b/libiqxmlrpc-server.pc.in
@@ -5,6 +5,6 @@ includedir=${prefix}/include/
 Name: libiqxmlrpc
 Description: Object-oriented C++ XML-RPC library. Server's stuff only.
 Version: @VERSION@
-Requires: libxml++-1.0
+Requires: libxml-2.0
 Libs: -L${libdir} -liqxmlrpc-server @BOOST_THREAD_LIB@ @OPENSSL_LIBS@
 Cflags: -I${includedir}
