--- a/libiqxmlrpc/version.h.in
+++ b/libiqxmlrpc/version.h.in
@@ -1,7 +1,7 @@
-#ifndef _LIBIQXMLRPC_WINDOWS_VERSION_FILE_
-#define _LIBIQXMLRPC_WINDOWS_VERSION_FILE_
+#ifndef _LIBIQXMLRPC_VERSION_FILE_
+#define _LIBIQXMLRPC_VERSION_FILE_
 
-#define PACKAGE "@PACKAGE@"
-#define VERSION "@VERSION@"
+#define PACKAGE "@PROJECT_NAME@"
+#define VERSION "@Libiqxmlrpc_VERSION@"
 
-#endif //_LIBIQXMLRPC_WINDOWS_VERSION_FILE_
+#endif //_LIBIQXMLRPC_VERSION_FILE_
