CMake: RPM and DEB (sample) generators.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,13 +18,4 @@ add_custom_target(dist
 	COMMAND bzr export --root=libiqxmlrpc-${Libiqxmlrpc_VERSION} libiqxmlrpc-${Libiqxmlrpc_VERSION}.tar.bz2
 	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
 
-## CPack
-set(CPACK_PACKAGE_NAME libiqxmlrpc)
-set(CPACK_PACKAGE_VERSION ${Libiqxmlrpc_VERSION})
-set(CPACK_PACKAGE_VENDOR "Anton Dedov")
-set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Simple object-oriented XML-RPC client-server solution for C++.")
-set(CPACK_PACKAGE_DESCRIPTION_FILE ${CMAKE_HOME_DIRECTORY}/Description.txt)
-# rpm
-set(CPACK_RPM_PACKAGE_LICENSE "BSD")
-set(CPACK_RPM_PACKAGE_GROUP "System Environment/Libraries")
-include(CPack)
+include(LibiqxmlrpcCPack.txt)
