Use Boost_INCLUDE_DIR in build.

--- a/libiqxmlrpc/CMakeLists.txt
+++ b/libiqxmlrpc/CMakeLists.txt
@@ -4,7 +4,7 @@ include(FindOpenSSL)
 include(CheckFunctionExists)
 
 find_package(Boost 1.41.0 COMPONENTS date_time thread system)
-include_directories(${XML2_INCLUDE_DIRS} ${LIBXML2_INCLUDE_DIR} ${OPENSSL_INCLUDE_DIR} ${PROJECT_BINARY_DIR}/libiqxmlrpc)
+include_directories(${Boost_INCLUDE_DIR} ${XML2_INCLUDE_DIRS} ${LIBXML2_INCLUDE_DIR} ${OPENSSL_INCLUDE_DIR} ${PROJECT_BINARY_DIR}/libiqxmlrpc)
 
 check_function_exists(poll HAVE_POLL)
 if(${HAVE_POLL})
