Link WinSock2 on Windows.

--- a/libiqxmlrpc/CMakeLists.txt
+++ b/libiqxmlrpc/CMakeLists.txt
@@ -114,6 +114,7 @@ add_library(iqxmlrpc SHARED
 
 if(WIN32)
 	add_definitions(-DLIBIQXMLRPC_COMPILATION -DDLL_EXPORT)
+	target_link_libraries(iqxmlrpc Ws2_32.lib)
 endif()
 
 target_link_libraries(iqxmlrpc
