Windows: fix installation instruction for Windows.

--- a/libiqxmlrpc/CMakeLists.txt
+++ b/libiqxmlrpc/CMakeLists.txt
@@ -128,6 +128,8 @@ string(REPLACE ";" " " PC_BOOST_LIBRARIES "${Boost_LIBRARIES}")
 string(REPLACE ";" " " PC_OPENSSL_LDFLAGS "${OPENSSL_LDFLAGS}")
 configure_file(../libiqxmlrpc.pc.in libiqxmlrpc.pc @ONLY)
 
-install(TARGETS iqxmlrpc LIBRARY DESTINATION lib)
+install(TARGETS iqxmlrpc DESTINATION lib)
 install(FILES ${PUBLIC_HEADERS} DESTINATION include/libiqxmlrpc)
-install(FILES libiqxmlrpc.pc DESTINATION lib/pkgconfig)
+if (UNIX)
+	install(FILES libiqxmlrpc.pc DESTINATION lib/pkgconfig)
+endif (UNIX)
