Build: fix build out of source tree.

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -9,11 +9,11 @@ endif (DOXYGEN_NOTFOUND)
 configure_file(libiqxmlrpc.doxygen.in libiqxmlrpc.doxygen @ONLY)
 
 add_custom_target(libiqxmlrpc.html ALL
-	doxygen libiqxmlrpc.doxygen	
-	DEPENDS libiqxmlrpc.doxygen)
+	doxygen ${CMAKE_BINARY_DIR}/doc/libiqxmlrpc.doxygen	
+	DEPENDS ${CMAKE_BINARY_DIR}/doc/libiqxmlrpc.doxygen)
 
 set(PROJ_DOC share/doc/libiqxmlrpc-${Libiqxmlrpc_VERSION})
-install(DIRECTORY libiqxmlrpc.html DESTINATION ${PROJ_DOC})
+install(DIRECTORY ${CMAKE_BINARY_DIR}/doc/libiqxmlrpc.html DESTINATION ${PROJ_DOC})
 install(FILES ../LICENSE ../NEWS ../README DESTINATION ${PROJ_DOC})
 
 set_directory_properties(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES libiqxmlrpc.html)
