--- a/libiqxmlrpc/CMakeLists.txt
+++ b/libiqxmlrpc/CMakeLists.txt
@@ -133,5 +133,5 @@ configure_file(../libiqxmlrpc.pc.in libiqxmlrpc.pc @ONLY)
 install(TARGETS iqxmlrpc DESTINATION lib)
 install(FILES ${PUBLIC_HEADERS} DESTINATION include/libiqxmlrpc)
 if (UNIX)
-	install(FILES libiqxmlrpc.pc DESTINATION lib/pkgconfig)
+	install(FILES ${CMAKE_BINARY_DIR}/libiqxmlrpc/libiqxmlrpc.pc DESTINATION lib/pkgconfig)
 endif (UNIX)
