--- a/fuzz/project.yaml
+++ b/fuzz/project.yaml
@@ -1,10 +1,10 @@
 # OSS-Fuzz project configuration for libiqxmlrpc
 # This file should be placed in the OSS-Fuzz projects directory
 
-homepage: "https://github.com/libiqxmlrpc/libiqxmlrpc"
+homepage: "https://github.com/yarikmsu/libiqxmlrpc"
 language: c++
-primary_contact: "dedkan@gmail.com"
-main_repo: "https://github.com/libiqxmlrpc/libiqxmlrpc"
+primary_contact: "ygorbunov@gmail.com"
+main_repo: "https://github.com/yarikmsu/libiqxmlrpc"
 sanitizers:
   - address
   - undefined
