Add unit tests for 80%+ code coverage
- Add 4 new test files with 160 test cases:
  - test_http.cc: HTTP headers, packets, and error handling
  - test_request_response.cc: XML-RPC request/response parsing
  - test_inet_addr.cc: Network address handling
  - test_value_types_extended.cc: Binary_data, Date_time, edge cases

- Update tests/CMakeLists.txt:
  - Add ctest integration for unit tests
  - Separate integration tests (server/client) from unit tests
  - Add 'check' target to run tests automatically after build

- Update CMakeLists.txt:
  - Add ENABLE_COVERAGE option for optional coverage measurement
  - Enable tests by default (build_tests=ON)

Achieves 88.9% line coverage.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,21 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+# Code coverage option
+option(ENABLE_COVERAGE "Enable code coverage" OFF)
+if(ENABLE_COVERAGE)
+    if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage -fprofile-arcs -ftest-coverage")
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --coverage -fprofile-arcs -ftest-coverage")
+        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --coverage")
+    endif()
+endif()
+
 add_subdirectory(libiqxmlrpc)
 
-option(build_tests "Build tests?" OFF)
+option(build_tests "Build tests?" ON)
 if (build_tests)
+	enable_testing()
 	add_subdirectory(tests)
 endif (build_tests)
 
