--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,8 +105,8 @@ jobs:
     - name: Generate coverage report
       run: |
         find . -name "*.gcda" -o -name "*.gcno" | head -20 || true
-        lcov --capture --directory . --output-file coverage.info --ignore-errors empty,gcov
-        lcov --remove coverage.info '/usr/*' '*/tests/*' '*/boost/*' --output-file coverage.info --ignore-errors empty,unused || true
+        lcov --capture --directory . --output-file coverage.info --ignore-errors empty,gcov,mismatch
+        lcov --remove coverage.info '/usr/*' '*/tests/*' '*/boost/*' --output-file coverage.info --ignore-errors empty,unused,mismatch || true
         lcov --list coverage.info || true
 
     - name: Upload to Codecov
