--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Build
       run: |
         mkdir build && cd build
-        cmake ..
+        cmake -Dbuild_tests=OFF ..
         cmake --build .
 
     - name: Perform CodeQL Analysis
