Configure Codecov Test Analytics
- Add JUnit XML output to ctest in coverage job
- Upload test results using codecov/test-results-action
- Add test analytics configuration to codecov.yml
- Add 'tests' to PR comment layout
- Configure unittests flag for coverage tracking

--- a/codecov.yml
+++ b/codecov.yml
@@ -9,9 +9,28 @@ coverage:
         target: auto
 
 comment:
-  layout: "reach, diff, flags, files"
+  layout: "reach, diff, flags, files, tests"
   behavior: default
   require_changes: false
   require_base: false
   require_head: true
   hide_project_coverage: false
+
+flag_management:
+  default_rules:
+    carryforward: true
+    statuses:
+      - type: project
+        target: auto
+        threshold: 1%
+      - type: patch
+        target: auto
+
+flags:
+  unittests:
+    paths:
+      - libiqxmlrpc/
+    carryforward: true
+
+test_analytics:
+  enabled: true
