Fix JUnit XML path for test results upload
The --output-junit option writes relative to current directory,
so use build/junit.xml to match the test directory.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,14 +100,14 @@ jobs:
       run: cmake --build build
 
     - name: Test
-      run: ctest --test-dir build --output-on-failure --output-junit junit.xml
+      run: ctest --test-dir build --output-on-failure --output-junit build/junit.xml
 
     - name: Upload test results to Codecov
       if: ${{ !cancelled() }}
       uses: codecov/test-results-action@v1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        files: junit.xml
+        files: build/junit.xml
         flags: unittests
         verbose: true
 
