Add integration tests for server-side networking code
Add test_integration.cc with 24 test cases covering:
- Acceptor: connection acceptance, multiple connections, thread pool
- Connection: send/receive, keep-alive, cleanup
- Auth plugin: authentication success/failure, anonymous access
- Executor: serial and pool processing, fault handling, shutdown
- Server: RPC cycles, introspection, xheaders, exit flag
- Client: single/multiple params, struct/array values

Uses in-process server with thread-based testing for ctest
automation. Each test uses a unique port offset to avoid conflicts.

Coverage improvements:
- acceptor.cc: 0% -> 83%
- connection.cc: 0% -> 87%
- auth_plugin.cc: 0% -> 100%
- executor.cc: partial -> 91%
- server.cc: 80%
- client.cc: 88%

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -44,6 +44,10 @@ iqxmlrpc_test(value-types-extended-test test_value_types_extended.cc)
 iqxmlrpc_test(method-dispatch-test test_method_dispatch.cc)
 iqxmlrpc_test(exceptions-test test_exceptions.cc)
 
+# Integration test (in-process server/client testing)
+iqxmlrpc_test(integration-test test_integration.cc methods.cc)
+set_tests_properties(integration-test PROPERTIES TIMEOUT 120)
+
 # Run tests automatically after build
 add_custom_target(check ALL
 	COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure
