--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,14 +114,14 @@ jobs:
     - name: Generate coverage report
       run: |
         echo "=== Capturing coverage ==="
-        lcov --capture --directory . --output-file coverage.info --ignore-errors empty,gcov,mismatch,negative --rc lcov_branch_coverage=0
-        lcov --remove coverage.info '/usr/*' '*/tests/*' '*/boost/*' --output-file coverage.info --ignore-errors empty,unused,mismatch,negative --rc lcov_branch_coverage=0
+        lcov --capture --directory . --output-file coverage.info --ignore-errors empty,gcov,mismatch,negative --rc branch_coverage=1
+        lcov --remove coverage.info '/usr/*' '*/tests/*' '*/boost/*' --output-file coverage.info --ignore-errors empty,unused,mismatch,negative --rc branch_coverage=1
         echo ""
         echo "=== Coverage Summary ==="
-        lcov --summary coverage.info --ignore-errors empty --rc lcov_branch_coverage=0
+        lcov --summary coverage.info --ignore-errors empty --rc branch_coverage=1
         echo ""
         echo "=== Per-file coverage (from gcov) ==="
-        gcov -n build/libiqxmlrpc/CMakeFiles/iqxmlrpc.dir/*.gcda 2>/dev/null | grep -E "^File|^Lines" | paste - - | grep "libiqxmlrpc/" | sed 's/File .libiqxmlrpc\///' | sed "s/'$//" | column -t || true
+        gcov -b -n build/libiqxmlrpc/CMakeFiles/iqxmlrpc.dir/*.gcda 2>/dev/null | grep -E "^File|^Lines|^Branches" | head -100 || true
 
     - name: Upload to Codecov
       uses: codecov/codecov-action@v4
