Fix cppcheck style warnings for explicit constructors and override
Add 'explicit' keyword to single-argument constructors to prevent
implicit conversions where appropriate. Add 'override' keyword to
virtual function overrides for better code clarity and to catch
errors at compile time.

Changes across 20 files:
- Added 'explicit' to constructors in Exception, Scalar, Inet_addr,
  Response, Server_connection, Connector, Connection, etc.
- Added 'override' to virtual method overrides in all derived classes
- Updated test_server.cc to use explicit Inet_addr construction
- Updated codecov.yml to ignore manual test files and make patch
  status informational

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,3 +1,11 @@
+ignore:
+  - "tests/test_server.cc"
+  - "tests/client.cc"
+  - "tests/client_stress.cc"
+  - "tests/server_config.cc"
+  - "tests/client_common.cc"
+  - "tests/client_opts.cc"
+
 coverage:
   status:
     project:
@@ -7,6 +15,9 @@ coverage:
     patch:
       default:
         target: auto
+        informational: true
+        paths:
+          - "libiqxmlrpc/"
 
 comment:
   layout: "reach, diff, flags, files, tests"
@@ -25,6 +36,7 @@ flag_management:
         threshold: 1%
       - type: patch
         target: auto
+        informational: true
 
 flags:
   unittests:
