--- a/codecov.yml
+++ b/codecov.yml
@@ -5,6 +5,7 @@ ignore:
   - "tests/server_config.cc"
   - "tests/client_common.cc"
   - "tests/client_opts.cc"
+  - "tests/test_integration.cc"
 
 coverage:
   status:
