Fix cppcheck warnings and add suppressions for intentional patterns
Code fixes:
- reactor_impl.h: Add const to HandlerState& parameters that are only read
- reactor_impl.h: Add const to Event_handler* parameter in find_handler_state
- inet_addr.cc: Add const to hostent* that is only read from

CI suppressions for intentional design patterns:
- noExplicitConstructor: Value class (implicit conversion from primitives)
- noExplicitConstructor: Inet_addr (implicit string-to-address conversion)
- noExplicitConstructor: const_iterator (standard iterator pattern)
- functionStatic: Null_lock methods (template compatibility)
- functionStatic: Various helper methods that access members in derived classes
- variableScope: value_type.cc (code clarity preference)
- knownConditionTrueFalse: http_client.cc (false positive in event loop)
- constParameterPointer: method.h (pointer ownership transfer)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -142,4 +142,18 @@ jobs:
       run: sudo apt-get update && sudo apt-get install -y cppcheck
 
     - name: Run cppcheck
-      run: cppcheck --enable=warning,style,performance --suppress=missingIncludeSystem libiqxmlrpc/
+      run: |
+        cppcheck --enable=warning,style,performance \
+          --suppress=missingIncludeSystem \
+          --suppress=noExplicitConstructor:libiqxmlrpc/value.h \
+          --suppress=noExplicitConstructor:libiqxmlrpc/value_type.h \
+          --suppress=noExplicitConstructor:libiqxmlrpc/inet_addr.h \
+          --suppress=functionStatic:libiqxmlrpc/lock.h \
+          --suppress=functionStatic:libiqxmlrpc/reactor_impl.h \
+          --suppress=functionStatic:libiqxmlrpc/http.cc \
+          --suppress=functionStatic:libiqxmlrpc/server.cc \
+          --suppress=functionStatic:libiqxmlrpc/ssl_lib.cc \
+          --suppress=variableScope:libiqxmlrpc/value_type.cc \
+          --suppress=knownConditionTrueFalse:libiqxmlrpc/http_client.cc \
+          --suppress=constParameterPointer:libiqxmlrpc/method.h \
+          libiqxmlrpc/
