--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -142,4 +142,8 @@ jobs:
       run: sudo apt-get update && sudo apt-get install -y cppcheck
 
     - name: Run cppcheck
-      run: cppcheck --enable=warning,style,performance --suppress=missingIncludeSystem libiqxmlrpc/
+      run: |
+        cppcheck --enable=warning,style,performance \
+          --suppress=missingIncludeSystem \
+          --inline-suppr \
+          libiqxmlrpc/
