Add performance benchmarks for optimization baseline
Add comprehensive performance test suite to measure baseline metrics
before implementing optimizations.

Benchmarks cover:
- Number conversion (boost::lexical_cast)
- Type checking (dynamic_cast overhead)
- HTTP date formatting
- DateTime parsing (substr allocations)
- Value cloning (Array, Struct)
- Base64 encoding/decoding
- Full request/response parsing and serialization

Run with: make perf-test
Results saved to: tests/performance_baseline.txt

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -57,3 +57,14 @@ add_custom_target(check ALL
 )
 
 # TODO: server-stop-test
+
+# Performance benchmark (separate from unit tests - run with make perf-test)
+add_executable(performance-test test_performance.cc)
+target_link_libraries(performance-test iqxmlrpc ${Boost_LIBRARIES} ${LIBXML2_LIBRARIES})
+
+add_custom_target(perf-test
+    COMMAND ${CMAKE_CURRENT_BINARY_DIR}/performance-test
+    DEPENDS performance-test
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+    COMMENT "Running performance benchmarks..."
+)
